--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -58,13 +58,15 @@
                 </div>
             </nav>
         </div>
+        {% comment %} end header {% endcomment %}
 
 
-        
-
-        
-
-
+        <div class="container bluebar minContent d-flex justify-content-center mt-2">
+            <h1 class="opaqe h1 d-flex text-nowrap p-2">Welcome To Code Connect</h1>
+        </div>
+        <div class="missonstatement">
+            <a>Welcome to Code Connect. CC is a hub for basecamp students to assist each other in various coding challenges. Various incentives are given for helping out ,so sign up and get to connecting!</a>
+        </div>
 
 
         {% comment %} Footer {% endcomment %}
