--- a/app/templates/setting.html
+++ b/app/templates/setting.html
@@ -4,55 +4,84 @@
 
 <br>
 
-<div class='container text-center marginMiddle photoMaxWidth'>
-    <a a class="linkStripper text-center" href="{% url 'home' %}">
-        {% if account.profile_picture.url %}
-            <div class='rounded-circle-container2'>
-                <img src="{{ account.profile_picture.url }}" alt="Profile Picture">
-            </div>
-        {% else %}
-            <div class='rounded-circle-container2'>
-                <img src="{% static 'images/default_no_profile_pic.jpg' %}" alt="Default Profile">
-            </div>
-            <h1>no profile pic</h1>
-        {% endif %}
-        <p class=''> Edit Profile Picture </p>
-    </a>
-</div>
+<div class="d-flex justify-content-center">
 
-<br>
-
-<div class='maxWidthBox container text-center bg-light d-smoke rounded w-sm-75 w-lg-25 p-4'>
-    <h3> Change Password </h3>
-    <div class=''>
+    <div class="scrollable-messages">
         {% if messages %}
             <div class="messages">
                 {% for message in messages %}
-                    <p{% if message.tags %} class="error errorShadow"{% endif %}>{{ message }}</p>
+                    <div class="alert alert-danger{% if message.tags %} error errorShadow{% endif %}" role="alert">
+                        <p>{{ message }}</p>
+                    </div>
                 {% endfor %}
             </div>
         {% endif %}
-        <form method="POST" action="">
-            {% csrf_token %}
-            <p class='error'>{{ Incorrect_username_or_password }}</p>
-
-            <div class="input-group mb-2">
-                <input type="password" name="old_password" placeholder="Old Password..." class="form-control">
-            </div>
-
-            <div class="input-group mb-2">
-                <input type="password" name="new_password1" placeholder="New Password..." class="form-control">
-            </div>
-
-            <div class="input-group mb-2">
-                <input type="password" name="new_password2" placeholder="Confirm New Password..." class="form-control">
-            </div>
-
-            <div class="d-flex justify-content-center mt-3 login_container">
-                <input class="btn login_btn" type="submit" value="Submit">
-            </div>
-        </form>
     </div>
+
+    <br>
+
+    <div class='d-flex'>
+        {% comment %} pfp popup change form {% endcomment %}
+        <div class="">
+            <div class="modal fade" id="profilePictureModal" tabindex="-1" aria-labelledby="profilePictureModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content bg-transparent">
+                        <form method="post" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            <input type="file" id="id_picture" name='picture'>
+                            <input type="submit" id="hiddenSubmitButton" name="picture_change_submit" style="display:none;">
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+            {% comment %} pfp change button {% endcomment %}
+            <div class='container text-center mt-3'>
+                <a class="linkStripper" href="#" data-bs-toggle="modal" data-bs-target="#profilePictureModal">
+                    {% if account.profile_picture.url %}
+                        <div class='rounded-circle-container2'>
+                            <img src="{{ account.profile_picture.url }}" alt="Profile Picture">
+                        </div>
+                    {% else %}
+                        <div class='rounded-circle-container2'>
+                            <img src="{% static 'images/default_no_profile_pic.jpg' %}" alt="Default Profile">
+                        </div>
+                        <h1>no profile pic</h1>
+                    {% endif %}
+                    <p class='mt-2'>Edit Profile Picture</p>
+                </a>
+            </div>
+        </div>
+
+        <br>
+
+        <div class='maxWidthBox container text-center bg-light d-smoke rounded w-sm-75 w-lg-25 p-4'>
+            <h3> Change Password </h3>
+            <div class=''>
+                <form method="POST" action="">
+                    {% csrf_token %}
+                    <p class='error'>{{ Incorrect_username_or_password }}</p>
+
+                    <div class="input-group mb-2">
+                        <input type="password" name="old_password" placeholder="Old Password..." class="form-control">
+                    </div>
+
+                    <div class="input-group mb-2">
+                        <input type="password" name="new_password1" placeholder="New Password..." class="form-control">
+                    </div>
+
+                    <div class="input-group mb-2">
+                        <input type="password" name="new_password2" placeholder="Confirm New Password..." class="form-control">
+                    </div>
+
+                    <div class="d-flex justify-content-center mt-3 login_container">
+                        <input class="btn login_btn" type="submit" name="password_change_submit" value="Submit">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 <br>
