--- a/app/templates/bugBoard.html
+++ b/app/templates/bugBoard.html
@@ -53,32 +53,17 @@
             {% if i.most_correct %}     
                 <div class="card border-blue boarderMed blue-box-shadow">
                     <div class="card-title">
-                        <h1 class="mx-auto card-title row d-flex justify-content-center mt-3">
+                        <h1 class="mx-auto card-title row d-flex justify-content-center mt-3 text-brown">
                             {{ i.title }}
                             <hr class='invisHr'>
                             <span class="minContent med-font badge d-flex align-items-center p-1 pe-2 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill">
-                                <img class="rounded-circle me-1" width="24" height="24" src="{% if i.account.profile_picture %}{{ i.account.profile_picture.url }}{% endif %}" alt="BCCA">by {{i.account.user}}
+                                <img class="rounded-circle me-1 text-brown" width="24" height="24" src="{% if i.account.profile_picture %}{{ i.account.profile_picture.url }}{% endif %}" alt="BCCA">by {{i.account.user}}
                             </span>        
                         </h1>
                     </div>
                     <div class='card-body'>
-                        <p class="card-text h6">{{ i.prompt }}</p>
-                        <span class="minContent badge text-bg-primary rounded-pill"><strong>Solution:</strong> {{ i.most_correct }}</span>
-                    </div>
-                </div>
-                {% comment %} Commenting workflow  {% endcomment %}
-                <div class="modal fade" id="commentModal{{ forloop.counter }}" tabindex="-1" aria-labelledby="commentModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content bg-transparent border-0">
-                            <form class='bg-transparent' method="post" action="">
-                                {% csrf_token %}
-                                <div class="mb-3 bg-transparent">
-                                    <textarea class="form-control" id="message" rows="4"></textarea>
-                                    <input type="hidden" name="report_id" value="{{ i.id }}">
-                                </div>
-                                <button type="submit" class="btn btn-primary" name='comment'>Submit Comment</button>
-                            </form>          
-                        </div>
+                        <p class="card-text h6 text-brown">{{ i.prompt }}</p>
+                        <span class="minContent badge background-brown rounded-pill"><strong>Solution:</strong> {{ i.most_correct }}</span>
                     </div>
                 </div>
             
@@ -89,16 +74,16 @@
             {% if i.account == CurrentUserData.account %}
                 <div class="card border-blue boarderMed blue-box-shadow">
                     <div class="card-title">
-                        <h1 class="mx-auto card-title row d-flex justify-content-center mt-3">
+                        <h1 class="mx-auto card-title row d-flex justify-content-center mt-3 text-brown">
                             {{ i.title }}
                             <hr class='invisHr'>
                             <span class="minContent med-font badge d-flex align-items-center p-1 pe-2 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill">
-                                <img class="rounded-circle me-1" width="24" height="24" src="{% if i.account.profile_picture %}{{ i.account.profile_picture.url }}{% endif %}" alt="BCCA">by {{i.account.user}}
+                                <img class="text-brown rounded-circle me-1" width="24" height="24" src="{% if i.account.profile_picture %}{{ i.account.profile_picture.url }}{% endif %}" alt="BCCA">by {{i.account.user}}
                             </span>        
                         </h1>
                     </div>
                     <div class='card-body'>
-                        <p class="card-text h6">{{ i.prompt }}</p>
+                        <p class="card-text h6 text-brown">{{ i.prompt }}</p>
                         <button class="btn btn-link linkStripper" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMessages{{ forloop.counter }}">View responses </button>        
                         {% comment %} Comment button triggering the form {% endcomment %}
                         <button class="btn btn-link linkStripper" type="button" data-bs-toggle="modal" data-bs-target="#commentModal{{ forloop.counter }}">Comment </button>   
@@ -107,7 +92,7 @@
                             <div>
                                 {% for msg in i.messages.all %}
                                     <div class='upVoteDiv'>
-                                        <p>{{ msg.content }}</p>
+                                        <p class='text-brown'>{{ msg.content }}</p>
                                         <button class='btn btn-sm bg-transparent border-0 upVoteIcon bi bi-arrow-up-circle' onclick="toggleIcon(this)"></button>
                                         {% if CurrentUserData.account != msg.account %}
                                             <button class='btn btn-sm bg-transparent border-0 upVoteIcon bi bi-check' onclick="autoPopulateAndSubmitForm()"></button>
@@ -162,7 +147,7 @@
 
                 <div class="card border-blue boarderMed blue-box-shadow">
                     <div class="card-title">
-                        <h1 class="mx-auto card-title row d-flex justify-content-center mt-3">
+                        <h1 class="text-brown mx-auto card-title row d-flex justify-content-center mt-3">
                             {{ i.title }}
                             <hr class='invisHr'>
                             <span class="minContent med-font badge d-flex align-items-center p-1 pe-2 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill">
@@ -171,7 +156,7 @@
                         </h1>
                     </div>
                     <div class='card-body'>
-                        <p class="card-text h6">{{ i.prompt }}</p>
+                        <p class="text-brown card-text h6">{{ i.prompt }}</p>
                         <button class="btn btn-link linkStripper" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMessages{{ forloop.counter }}">View responses </button>        
                         {% comment %} Comment button triggering the form {% endcomment %}
                         <button class="btn btn-link linkStripper" type="button" data-bs-toggle="modal" data-bs-target="#commentModal{{ forloop.counter }}">Comment </button>
@@ -180,7 +165,7 @@
                             <div >
                                 {% for msg in i.messages.all %}
                                     <div class='upVoteDiv'>
-                                        <p>{{ msg.content }}</p>
+                                        <p class='text-brown'>{{ msg.content }}</p>
                                         <button class='btn btn-sm bg-transparent border-0 upVoteIcon bi bi-arrow-up-circle' onclick="toggleIcon(this)"></button>
                                     </div>                                   
                                 {% endfor %}  
