--- a/app/templates/bugBoard.html
+++ b/app/templates/bugBoard.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class='card-body'>
                         <p class="card-text h6 text-brown">{{ i.prompt }}</p>
-                        <span class="minContent badge background-brown rounded-pill"><strong>Solution:</strong> {{ i.most_correct }}</span>
+                        <span style='text-wrap: wrap !important;' class="minContentHieght badge background-brown rounded-pill mx-auto maxContent"><strong>Solution:</strong> {{ i.most_correct }}</span>
                     </div>
                 </div>
             
