--- a/app/templates/bugBoard.html
+++ b/app/templates/bugBoard.html
@@ -53,7 +53,7 @@
             {% if i.most_correct %}     
                 <div class="card border-blue boarderMed blue-box-shadow">
                     <div class="card-title">
-                        <h1 class="mx-auto card-title row d-flex justify-content-center mt-3 text-brown">
+                        <h1 class="mx-auto card-title row d-flex justify-content-center mt-3 text-brown mx-auto text-center">
                             {{ i.title }}
                             <hr class='invisHr'>
                             <span class="minContent med-font badge d-flex align-items-center p-1 pe-2 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill">
@@ -74,7 +74,7 @@
             {% if i.account == CurrentUserData.account %}
                 <div class="card border-blue boarderMed blue-box-shadow">
                     <div class="card-title">
-                        <h1 class="mx-auto card-title row d-flex justify-content-center mt-3 text-brown">
+                        <h1 class="mx-auto card-title row d-flex justify-content-center mt-3 text-brown mx-auto text-center">
                             {{ i.title }}
                             <hr class='invisHr'>
                             <span class="minContent med-font badge d-flex align-items-center p-1 pe-2 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill">
@@ -147,7 +147,7 @@
 
                 <div class="card border-blue boarderMed blue-box-shadow">
                     <div class="card-title">
-                        <h1 class="text-brown mx-auto card-title row d-flex justify-content-center mt-3">
+                        <h1 class="text-brown mx-auto card-title row d-flex justify-content-center mt-3 mx-auto text-center">
                             {{ i.title }}
                             <hr class='invisHr'>
                             <span class="minContent med-font badge d-flex align-items-center p-1 pe-2 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-pill">
